--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "win": {
       "target": [
         {
-          "target": "portable",
+          "target": "nsis",
           "arch": [
             "x64"
           ]
